--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 body {
+    margin: fix;
+    width: 1024px;
+    padding: 10px;
+    font-size: 14px;
     font-family: sans-serif;
 }
 
@@ -9,13 +13,15 @@ table, th, td {
     padding: 8px;
 }
 
-
+/* la parte superior de la tabla*/
 .encabezado {
     width: 100%;
     border-collapse: collapse;
     vertical-align: middle;
+    
 }
 
+/*la parte derecha de la tabla*/
 .parte-superior-derecha{
     width: 10%;
     text-align: center;
@@ -36,6 +42,7 @@ table, th, td {
 
 }
 
+/*añadiendo color la parte dentro de la tabla*/
 tbody tr:nth-child(odd) {
     background-color:#fff;
 }
